# dwf-mcp-server

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .mcp.example.json  .mise.toml  .yamllint.yml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  server.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: labeler.yml
.github/workflows/: ci.yml  docker-publish.yml  labeler.yml  mcp-registry.yml  yamllint.yml
docs/: hardware-validation.md  host-setup.md
src/dwf_mcp_server/: __init__.py  diagnostics.py  patches.py  rendering.py  server.py  session.py
src/dwf_mcp_server/tools/: __init__.py  analog.py  devices.py  digital.py  gpio.py  power.py  protocols.py  session_tools.py
tests/: test_server.py
